fix bug - added flex-wrap to note container

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 #note-card-container{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .note-card{
